<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">

<!--        <ImageView-->
<!--            android:layout_width="70sp"-->
<!--            android:layout_height="70sp"-->
<!--                android:background="@drawable/app_logo">-->
<!--        </ImageView>-->

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="20dp"
            android:background="@drawable/edittext">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:padding="24dp">


                        <TextView
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            android:id="@+id/loginText"
                            android:textSize="30sp"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:fontFamily="@font/cairo_extrabold"
                            />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:id="@+id/username"
                            android:background="@drawable/edittext"
                            android:drawableLeft="@drawable/baseline_person_24"
                            android:drawablePadding="8dp"
                            android:hint="@string/username"
                            android:padding="8dp"
                            android:fontFamily="@font/cairo_extrabold"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/cardview_dark_background"
                            android:layout_marginTop="30dp"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:id="@+id/password"
                            android:background="@drawable/edittext"
                            android:drawableLeft="@drawable/baseline_lock_24"
                            android:drawablePadding="8dp"
                            android:hint="@string/password"
                            android:padding="8dp"
                            android:fontFamily="@font/cairo_extrabold"
                            android:inputType="textVisiblePassword"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/cardview_dark_background"
                            android:layout_marginTop="20dp"/>

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:id="@+id/loginButton"
                            android:text="@string/login"
                            android:fontFamily="@font/cairo_extrabold"
                            android:textSize="18sp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:backgroundTint="@color/green"
                            app:cornerRadius = "10dp"/>

                </LinearLayout>

        </androidx.cardview.widget.CardView>

</LinearLayout>